heap allocation complete, bitches

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
    "files.associations": {
-      "cstddef": "c"
+      "cstddef": "c",
+      "array": "cpp",
+      "hash_map": "cpp",
+      "string_view": "cpp",
+      "initializer_list": "cpp",
+      "utility": "cpp"
    }
 }
